deploy/k8s/overlays/oci/storageclass-oci.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: oci-bv
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: oci-bv
